# longest-word

./: pyproject.toml  wsgi.py
src/longest_word/: game.py
static/: style.css
tests/: test_game.py
