[project]
name = "longest-word"
version = "0.1.0"
description = ""
authors = [
    {name = "nikki xie",email = "nikki099@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pylint (>=3.3.4,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "flask (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "longest_word", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pylin = "^0.2.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
